--- a/index.html
+++ b/index.html
@@ -81,7 +81,10 @@
             }
 
         }
-
+.img_top{
+    width=700px;
+    height=500px;
+}
         /*モバイル対応*/
         @media (max-width: 767px) {
 
@@ -105,13 +108,15 @@
             }
 
         }
+        
     </style>
 </head>
 
 <body>
     <h1>多摩動物公園<br>ハイキング</h1>
-    <img src="top.webp" alt="トップページ_キリン" width="700" height="500">
-
+    <div class=img_top>
+    <img src="top.webp" alt="トップページ_キリン" >
+</div>
     <a href="contents1.html" style="text-decoration:none;"><button class="favorite styled" type="button">猿へ</button></a>
     <a href="contents2.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">マレーバクへ</button></a>
