--- a/contents1.html
+++ b/contents1.html
@@ -105,7 +105,10 @@
         .name {
             text-align: center;
         }
-
+        .img{
+            width: 600px;
+            height: 700px;
+        }
         /*モバイル対応*/
         @media (max-width: 767px) {
 
@@ -140,7 +143,9 @@
         <button class="favorite styled" type="button">猿</button>
     </div>
     <h1>猿</h1>
-    <img src="contents1.webp" alt="コンテンツ1_猿" width="600" height="700">
+    <div class=img1>
+    <img src="contents1.webp" alt="コンテンツ1_猿">
+    </div>
     <a href="contents2.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">マレーバクへ</button></a>
 </body>
