--- a/contents2.html
+++ b/contents2.html
@@ -99,7 +99,10 @@
                     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
             }
         }
-
+        .img2{
+            width: 800px;
+            height: 600px;
+        }
         /*モバイル対応*/
         @media (max-width: 767px) {
 
@@ -123,6 +126,7 @@
             }
 
         }
+        
     </style>
 </head>
 
@@ -137,7 +141,9 @@
         <button class="favorite styled" type="button">マレーバク</button>
     </div>
     <h1>マレーバク</h1>
+    <div class="img2">
     <img src="contents2.webp" alt="コンテンツ2_マレーバク" width="800" height="600">
+    </div>
     <a href="contents3.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">インドサイへ</button></a>
 </body>
