--- a/contents2.html
+++ b/contents2.html
@@ -142,7 +142,7 @@
     </div>
     <h1>マレーバク</h1>
     <div class="img2">
-    <img src="contents2.webp" alt="コンテンツ2_マレーバク" width="800" height="600">
+    <img src="contents2.webp" alt="コンテンツ2_マレーバク" >
     </div>
     <a href="contents3.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">インドサイへ</button></a>
