--- a/contents3.html
+++ b/contents3.html
@@ -99,7 +99,10 @@
                     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
             }
         }
-
+        .img3{
+            width: 800px;
+            height: 600px;
+        }
         /*モバイル対応*/
         @media (max-width: 767px) {
 
@@ -145,8 +148,9 @@
 
     </div>
     <h1>インドサイ</h1>
-
-    <img src="contents3.webp" alt="コンテンツ3_インドサイ" width="800" height="600">
+    <div class="img3">
+    <img src="contents3.webp" alt="コンテンツ3_インドサイ">
+    </div>
 
     <a href="index.html" style="text-decoration:none;"><button class="favorite styled" type="button">TOPへ</button></a>
 </body>
