--- a/contents2.html
+++ b/contents2.html
@@ -31,7 +31,7 @@
             margin: auto;
             display: block;
         }
-        .img2{
+        .img2 img{
             width: 800px;
             height: 600px;
         }
