--- a/contents2.html
+++ b/contents2.html
@@ -31,7 +31,7 @@
             margin: auto;
             display: block;
         }
-        .img2 img{
+        p.img img{
             width: 800px;
             height: 600px;
         }
@@ -141,9 +141,9 @@
         <button class="favorite styled" type="button">マレーバク</button>
     </div>
     <h1>マレーバク</h1>
-    <div class="img2">
+    <p class="img">
     <img src="contents2.webp" alt="コンテンツ2_マレーバク" >
-    </div>
+    </p>
     <a href="contents3.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">インドサイへ</button></a>
 </body>
