--- a/contents1.html
+++ b/contents1.html
@@ -105,7 +105,7 @@
         .name {
             text-align: center;
         }
-        .img{
+        p.img img{
             width: 600px;
             height: 700px;
         }
@@ -143,9 +143,9 @@
         <button class="favorite styled" type="button">猿</button>
     </div>
     <h1>猿</h1>
-    <div class=img1>
+    <p class="img">
     <img src="contents1.webp" alt="コンテンツ1_猿">
-    </div>
+    </p>
     <a href="contents2.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">マレーバクへ</button></a>
 </body>
