--- a/contents3.html
+++ b/contents3.html
@@ -99,7 +99,7 @@
                     inset 2px 2px 3px rgba(0, 0, 0, 0.6);
             }
         }
-        .img3{
+        p.img img{
             width: 800px;
             height: 600px;
         }
@@ -148,9 +148,9 @@
 
     </div>
     <h1>インドサイ</h1>
-    <div class="img3">
+    <p class="img">
     <img src="contents3.webp" alt="コンテンツ3_インドサイ">
-    </div>
+    </p>
 
     <a href="index.html" style="text-decoration:none;"><button class="favorite styled" type="button">TOPへ</button></a>
 </body>
