--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             }
 
         }
-.img_top{
+p.img img{
     width=700px;
     height=500px;
 }
@@ -114,9 +114,9 @@
 
 <body>
     <h1>多摩動物公園<br>ハイキング</h1>
-    <div class=img_top>
+    <p class="img">
     <img src="top.webp" alt="トップページ_キリン" >
-</div>
+</p>
     <a href="contents1.html" style="text-decoration:none;"><button class="favorite styled" type="button">猿へ</button></a>
     <a href="contents2.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">マレーバクへ</button></a>
