--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 
         }
         p.img img{
-            width=700px;
-            height=500px;
+            width: 700px;
+            height: 500px;
         }
         body {
             background-color: #92EFFF;
