--- a/contents2.html
+++ b/contents2.html
@@ -122,7 +122,8 @@
 
             img {
                 max-width: 100%;
-                height: 500px;
+                
+                 aspect-ratio: 5 / 3;
             }
 
         }
