--- a/contents2.html
+++ b/contents2.html
@@ -122,7 +122,7 @@
 
             img {
                 max-width: 100%;
-                
+                height: auto;
                  aspect-ratio: 5 / 3;
             }
 
