--- a/contents2.html
+++ b/contents2.html
@@ -119,7 +119,7 @@
                  aspect-ratio: 5 / 3;
             }
             * {
-                margin: 0;
+                margin: 0 4%;
                 padding: 0;
                 box-sizing: border-box;
             }
