--- a/contents2.html
+++ b/contents2.html
@@ -114,9 +114,10 @@
                 padding: 287px 0;
             }
              img {
-                max-width: 100%;
-                height: auto;
-                 aspect-ratio: 5 / 3;
+                width: 100%;
+                  max-width: 640px;
+              height: auto;
+              box-sizing: border-box;
             }
             * {
                 margin: 0 4%;
