--- a/contents2.html
+++ b/contents2.html
@@ -28,7 +28,7 @@
         }
 
         img {
-            margin: auto;
+            margin: 0 4%;
             display: block;
             width: 100%;
         }
