--- a/contents2.html
+++ b/contents2.html
@@ -30,7 +30,7 @@
         img {
             margin: 0 4%;
             display: block;
-            width: 100%;
+            max-width: 100%;
         }
         p.img img{
             width: 800px;
