--- a/contents2.html
+++ b/contents2.html
@@ -28,8 +28,8 @@
         }
 
         img {
-            margin: 0 4%;
-            display: block;
+            
+            margin: 0 auto;
             max-width: 100%;
         }
         p.img img{
