--- a/contents2.html
+++ b/contents2.html
@@ -28,7 +28,7 @@
         }
 
         img {
-            display: grid;
+            display: block;
             margin: auto;
             max-width: 100%;
         }
