--- a/contents3.html
+++ b/contents3.html
@@ -152,7 +152,7 @@
     <img src="contents3.webp" alt="コンテンツ3_インドサイ">
     </p>
 
-    <a href="index.html" style="text-decoration:none;"><button class="favorite styled" type="button">TOPへ</button></a>
+    <a href="contents4.html" style="text-decoration:none;"><button class="favorite styled" type="button">Mapへ</button></a>
 </body>
 
 </html>
