--- a/contents4.html
+++ b/contents4.html
@@ -144,9 +144,9 @@
         <button class="favorite styled" type="button">インドサイ</button>
 
     </div>
-    <h1>インドサイ</h1>
+    <h1>MAP</h1>
 
-    <img src="contents3.webp" alt="コンテンツ3_インドサイ" width="800" height="600">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3242.048423110998!2d139.39943587636716!3d35.65117858162331!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6018e2583ad7889f%3A0x5e4ecc1e62a0284!2z5aSa5pGp5YuV54mp5YWs5ZyS!5e0!3m2!1sja!2sjp!4v1734671514473!5m2!1sja!2sjp" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
     <a href="index.html" style="text-decoration:none;"><button class="favorite styled" type="button">TOPへ</button></a>
 </body>
