--- a/contents4.html
+++ b/contents4.html
@@ -141,7 +141,9 @@
         <a href="contents2.html" style="text-decoration:none;"><button class="favorite styled"
                 type="button">マレーバク</button></a>
         >
-        <button class="favorite styled" type="button">インドサイ</button>
+        <a href="contents3.html" style="text-decoration:none;"><button class="favorite styled" type="button">インドサイ</button></a>
+        >
+        <button class="favorite styled"type="button">MAP</button></a>
 
     </div>
     <h1>MAP</h1>
