--- a/index.html
+++ b/index.html
@@ -122,6 +122,7 @@
             type="button">マレーバクへ</button></a>
     <a href="contents3.html" style="text-decoration:none;"><button class="favorite styled"
             type="button">インドサイへ</button></a>
+    <a href="contents4.html" style="text-decoration:none;"><button class="favorite styled" type="button">Mapへ</button></a>
 </body>
 
 </html>
