--- a/contents2.html
+++ b/contents2.html
@@ -35,6 +35,7 @@
         p.img img{
             width: 800px;
             height: 600px;
+            max-width: 100%;
         }
         body {
             background-color: #E5FF72;
