--- a/contents2.html
+++ b/contents2.html
@@ -30,12 +30,12 @@
         img {
             display: block;
             margin: auto;
-            max-width: 100%;
+            width: 100%;
+            height: auto;
         }
         p.img img{
             width: 800px;
             height: 600px;
-            max-width: 100%;
         }
         body {
             background-color: #E5FF72;
