--- a/contents2.html
+++ b/contents2.html
@@ -32,10 +32,14 @@
             margin: auto;
             width: 100%;
             height: auto;
+            width: min(95vw, 95vh * 0.75);  /* 横幅の計算 */
+  height: min(95vh, 95vw / 0.75); /* 縦幅の計算 */ 
         }
         p.img img{
             width: 800px;
             height: 600px;
+            width: min(95vw, 95vh * 0.75);  /* 横幅の計算 */
+  height: min(95vh, 95vw / 0.75); /* 縦幅の計算 */ 
         }
         body {
             background-color: #E5FF72;
